Cherry-pick 258848@main (8c38ebd63c97). https://bugs.webkit.org/show_bug.cgi?id=250480

REGRESSION(258663@main) [GStreamer] MIME API test crashes due to GStreamer being initialized in UIProcess
    https://bugs.webkit.org/show_bug.cgi?id=250480

    Reviewed by Xabier Rodriguez-Calvar.

    The registry no longer directly registers GStreamer elements. Instead it is done from call-sites,
    such as the WebRTC provider, when needed. Also the scanner is now able to refresh its internal
    state, this is needed in situations where the singleton might have been created before the
    registration of additional elements.

    * Source/WebCore/platform/graphics/gstreamer/GStreamerCommon.cpp:
    (WebCore::registerVideoEncoder):
    (WebCore::registerWebKitGStreamerElements):
    (WebCore::registerWebKitGStreamerVideoEncoder):
    * Source/WebCore/platform/graphics/gstreamer/GStreamerCommon.h:
    * Source/WebCore/platform/graphics/gstreamer/GStreamerRegistryScanner.cpp:
    (WebCore::GStreamerRegistryScanner::singletonNeedsInitialization):
    (WebCore::GStreamerRegistryScanner::singleton):
    (WebCore::GStreamerRegistryScanner::GStreamerRegistryScanner):
    (WebCore::GStreamerRegistryScanner::refresh):
    (WebCore::GStreamerRegistryScanner::initializeDecoders):
    (WebCore::GStreamerRegistryScanner::initializeEncoders):
    * Source/WebCore/platform/graphics/gstreamer/GStreamerRegistryScanner.h:
    * Source/WebCore/platform/mediastream/gstreamer/GStreamerWebRTCProvider.cpp:
    (WebCore::GStreamerWebRTCProvider::initializeVideoEncodingCapabilities):
    * Tools/TestWebKitAPI/glib/TestExpectations.json:

    Canonical link: https://commits.webkit.org/258848@main